# pokemon-api

./: input.sql  netlify.toml
crates/pokemon-api/: Cargo.toml
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/: Cargo.toml
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
functions/ts-api/: index.ts  package-lock.json  package.json
